--- a/24일차/ex24-02.html
+++ b/24일차/ex24-02.html
@@ -30,7 +30,7 @@
       .chat-input {
         flex: 1;
         width: 100%;
-        background-color: #555;
+        background-color: white;
         display: flex;
         justify-content: stretch;
       }
@@ -45,6 +45,7 @@
         font-size: 1.2rem;
         color: rgb(73, 66, 141);
         font-weight: bold;
+        border-radius: 0 0 0 10px;
       }
       button {
         width: 30%;
@@ -73,6 +74,7 @@
         padding: 0.7rem 1rem;
         border-radius: 20px;
         word-break: break-word;
+        white-space: pre-line;
       }
       .name {
         font-size: 0.8rem;
@@ -99,7 +101,20 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        /* border: 1px solid black; */
+        background-color: aliceblue;
+      }
+      .icon {
+        background-color: rgba(0, 0, 0, 0.253);
+        border-radius: 50%;
+        width: 40px;
+        height: 40px;
+        text-align: center;
+      }
+      .profile {
+        display: flex;
+        justify-content: end;
+        align-items: center;
+        margin: 10px;
       }
     </style>
   </head>
@@ -116,16 +131,52 @@
         </div>
         <div class="message user">
           <div>
-            <div class="name">나</div>
+            <div class="profile">
+              <div class="name">나</div>
+              <div class="icon">프사</div>
+            </div>
             <div class="bubble">가나다라마바사아자차카타파하</div>
           </div>
         </div>
       </div>
 
       <div class="chat-input">
-        <textarea name="" id="" placeholder="메시지를 입력하세요"></textarea
+        <textarea
+          name=""
+          id="text-area"
+          placeholder="메시지를 입력하세요"
+        ></textarea
         ><button id="send-btn">테스트22</button>
       </div>
     </div>
+
+    <script>
+      const sendBtn = document.getElementById("send-btn");
+      // const textArea = document.getElementById("text-area");
+      const textArea = document.querySelector("#text-area");
+      const chatContainer = document.querySelector(".chat-container");
+
+      const sendMessage = () => {
+        const userMessage = textArea.value.trim();
+        if (userMessage) {
+          console.log(userMessage);
+          const userDiv = document.createElement("div");
+          userDiv.className = "message user";
+          chatContainer.appendChild(userDiv);
+          userDiv.innerHTML = `<div><div class="profile"><div class="name">나</div><div class="icon">프사</div></div><div class="bubble">${userMessage}</div></div></div>`;
+          textArea.value = ""; // 전송하고 입력창 비우기
+          chatContainer.scrollTop = chatContainer.scrollHeight; // 스크롤을 맨 아래로 이동
+        }
+      };
+      sendBtn.addEventListener("click", sendMessage);
+      textArea.addEventListener("keydown", (event) => {
+        console.log(event);
+        if (event.key === "Enter" && !event.shiftKey) {
+          // if (event.key === "Enter" && event.key !== "Shift") {
+          event.preventDefault(); // 한칸내리는 기능 방지
+          sendMessage();
+        }
+      });
+    </script>
   </body>
 </html>
