--- a/export.html
+++ b/export.html
@@ -3,13 +3,18 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Soyoung Lee Portfolio</title>
+  <title>SeongHun Lee Portfolio</title>
   <style>
     /* 리셋 */
     * { margin:0; padding:0; box-sizing:border-box; }
     body { font-family: 'Noto Sans KR', sans-serif; line-height:1.6; color:#333; }
     a {color:#0099ff; text-decoration:none; }
     img { max-width:100%; display:block; }
+
+    /* 페이지 부듣럽게 이동 */
+    html{
+      scroll-behavior: smooth;
+    }
 
     /* 헤더 */
     header {
@@ -91,7 +96,7 @@
 <body>
 
   <header>
-    <h1>Soyoung Lee</h1>
+    <h1>SeongHun Lee</h1>
     <nav>
       <a href="#about">About</a>
       <a href="#work">Work</a>
@@ -100,11 +105,14 @@
     </nav>
   </header>
 
+  <section style="background-color: #666;">
+    <h1>main</h1>
+  </section>
   <main>
 
     <section id="about" class="intro">
       <h2>ABOUT ME</h2>
-      <p>6년 차 웹 퍼블리셔입니다.<br>HTML, CSS, JavaScript, Figma 등을 활용하고, 웹표준과 웹접근성을 준수합니다.</p>
+      <p>신입 개발자입니다.<br>HTML, CSS, JavaScript, Python 등을 활용하고, 웹표준과 웹접근성을 준수합니다.</p>
     </section>
 
     <section id="work">
@@ -112,19 +120,15 @@
       <div class="experience">
         <h3>경력</h3>
         <ul>
-          <li>2025.01 – 현재: 테크랩스</li>
-          <li>2019.02 – 2023.11: (주)아이엠오</li>
-          <li>2015.03 – 2018.04: 한국무역정보통신</li>
+          <li>2025.02~2025.07: 빅데이터를 활용한 자바 개발자(국립부경대학교 지역산업맞춤형인력양성사업단)</li>
         </ul>
       </div>
       <div class="skills">
         <h3>주요 스킬</h3>
         <ul>
-          <li>HTML / CSS / SCSS</li>
-          <li>JavaScript / jQuery / GSAP</li>
-          <li>Responsive Design</li>
-          <li>Figma / Adobe XD / Photoshop / Illustrator</li>
-          <li>접근성, 웹표준, SEO 퍼블리싱</li>
+          <li>HTML / CSS </li>
+          <li>JavaScript / SpringBoot</li>
+          <li>Oracle / MySQL</li>
         </ul>
       </div>
     </section>
@@ -133,31 +137,24 @@
       <h2>PROJECTS</h2>
       <div class="projects">
         <div class="project">
-          <img src="https://via.placeholder.com/400x180.png?text=3D+Panorama" alt="3D Panorama">
+          <img src="" alt="없음">
           <div class="project-info">
-            <h3>3D PANORAMA</h3>
-            <p>#3D #CSS #JS #Interactive (2024)</p>
+            <h3>프로젝트명</h3>
+            <p>#Python #CSS #JS </p>
           </div>
         </div>
         <div class="project">
-          <img src="https://via.placeholder.com/400x180.png?text=Music+Player" alt="Music Player">
+          <img src="" alt="없음">
           <div class="project-info">
-            <h3>MUSIC PLAYER</h3>
-            <p>#3D #CSS #JS #Interactive (2024)</p>
+            <h3>프로젝트명</h3>
+            <p>#HTML #CSS #JS</p>
           </div>
         </div>
         <div class="project">
-          <img src="https://via.placeholder.com/400x180.png?text=SORO" alt="SORO">
+          <img src="" alt="없음">
           <div class="project-info">
-            <h3>SORO</h3>
-            <p>#GSAP #Clone #Interactive #Responsive (2024)</p>
-          </div>
-        </div>
-        <div class="project">
-          <img src="https://via.placeholder.com/400x180.png?text=Qude" alt="Qude">
-          <div class="project-info">
-            <h3>Qude</h3>
-            <p>#GSAP #Clone #Interaction (2024)</p>
+            <h3>프로젝트명</h3>
+            <p>#JAVA #JS #SpringBoot</p>
           </div>
         </div>
       </div>
@@ -167,14 +164,14 @@
       <h2>CONTACT</h2>
       <p class="contact">
         <a href="mailto:s.young1922@gmail.com">Email</a>
-        <a href="https://github.com/s-young1922" target="_blank">GitHub</a>
+        <a href="https://github.com/2sseong" target="_blank">GitHub</a>
       </p>
     </section>
 
   </main>
 
   <footer>
-    &copy; 2025 Soyoung Lee. All rights reserved.
+    &copy; 2025 SeongHun Lee. All rights reserved.
   </footer>
 
 </body>
